--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-    <h1>About me</h1>
+    <h1 class="h1-responsive font-weight-bold text-center my-4">About me</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis augue ac nunc tristique lacinia. Phasellus blandit commodo vestibulum. Pellentesque lacinia, mauris et tempor tincidunt, risus urna tristique massa, eget mattis tortor mauris non libero. Mauris fermentum tincidunt metus quis porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis augue ac nunc tristique lacinia. Phasellus blandit commodo vestibulum. Pellentesque lacinia, mauris et tempor tincidunt, risus urna tristique massa, eget mattis tortor mauris non libero. Mauris fermentum tincidunt metus quis porttitor.</p>
 
 </div>
