--- a/templates/cv.html
+++ b/templates/cv.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 
-<h1>CV</h1>
+<div class=container">
+    <h1 class="h1-responsive font-weight-bold text-center my-4">CV</h1>
+</div>
+
+<iframe src="../cv/Portfolio_CV.pdf" width="80%" height="600px" frameborder="1"></iframe>
+
 
 {% endblock %}
