--- a/templates/projects.html
+++ b/templates/projects.html
@@ -2,14 +2,65 @@
 
 {% block content %}
 
-<h1>Projects</h1>
 
 
 
 
+<div class="cardsblock container">
+
+    <div class="intropara">
+<h1 class="h1-responsive font-weight-bold text-center my-4">Projects</h1>
+<p class="text-center"> Please feel free to take a look at some of the technical projects I have worked on below:</p>
+</div>
 
 
+<div class="row">
 
+    <div class="col-sm-3">
+    <div class="card" style="width: 15rem;">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+    </div>
+
+    <div class="col-sm-3">
+    <div class="card" style="width: 15rem;">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+    </div>
+
+    <div class="col-sm-3">
+    <div class="card" style="width: 15rem;">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+    </div>
+
+    <div class="col-sm-3">
+        <div class="card" style="width: 15rem;">
+      <img class="card-img-top" src="..." alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+    </div>
+    </div>
+</div>
 
 
 
