--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <div class="container">
+    <h1 class="h1-responsive font-weight-bold text-center my-4">Welcome</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis augue ac nunc tristique lacinia. Phasellus blandit commodo vestibulum. Pellentesque lacinia, mauris et tempor tincidunt, risus urna tristique massa, eget mattis tortor mauris non libero. Mauris fermentum tincidunt metus quis porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis augue ac nunc tristique lacinia. Phasellus blandit commodo vestibulum. Pellentesque lacinia, mauris et tempor tincidunt, risus urna tristique massa, eget mattis tortor mauris non libero. Mauris fermentum tincidunt metus quis porttitor.</p>
 </div>
 
