Adding README notes

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 <div class="banner">
-  <h1>Daniel Teegan</h1>
+  <h1 id="myname">Daniel Teegan</h1>
   <h4>Junior DevOps Engineer</h4>
 </div>
+
   <ul class="nav justify-content-center">
     <li class="nav-item">
       <a class="nav-link active" href="index">Home</a>
